HVAC Backup 2/objects/SMS_Log__c(1).object
<CustomObject>
    <fields>
        <fullName>Detailed_Status_Code__c</fullName>
        <label>Detailed Status Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Status__c</fullName>
        <label>Detailed Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message_SID__c</fullName>
        <description>contains SID form the api response</description>
        <label>Message SID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Numbers__c</fullName>
        <label>Phone Numbers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>refers to the the record id which we use in the message body</description>
        <label>Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>queued</fullName>
                </value>
                <value>
                    <fullName>sending</fullName>
                </value>
                <value>
                    <fullName>submitted</fullName>
                </value>
                <value>
                    <fullName>sent</fullName>
                </value>
                <value>
                    <fullName>failed-dnd</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SMS Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>Template_Name__c</columns>
        <columns>Message_SID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>